desktop/source/app/officeipcthread.hxx
@@ -64,6 +64,7 @@ struct ProcessDocumentsRequest
     OUString aImageConversionType;
     std::vector< OUString > aInFilter;
     ::osl::Condition *pcProcessed;  // pointer condition to be set when the request has been processed
+    bool* mpbSuccess = nullptr; // pointer to boolean receiving if the processing was successful
     bool bTextCat; // boolean flag indicating whether to dump text content to console
     bool bScriptCat; // boolean flag indicating whether to dump script content to console
 };
@@ -91,6 +92,8 @@ class RequestHandler: public salhelper::SimpleReferenceObject
 
     /* condition to be set when the request has been processed */
     ::osl::Condition cProcessed;
+    /* receives if the processing was successful (may be false e.g. when shutting down) */
+    bool mbSucces = false;
 
     /* condition to be set when the main event loop is ready
        otherwise an error dialogs event loop could eat away
